--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<button mat-raised-button color="primary">Hello Material</button>
-
-<router-outlet></router-outlet>
+<div>
+<button mat-raised-button color="primary">Hello, Material!</button>
+</div>
+<div>
+<mat-form-field appearance="outline">
+<mat-label>Text Input</mat-label>
+<input matInput type="text" placeholder="Input some text" name="sample">
+</mat-form-field>
+</div>
