--- a/angular-material/src/app/app.component.scss
+++ b/angular-material/src/app/app.component.scss
@@ -1,3 +1,24 @@
-div {
-  margin-bottom: 8px;
+mat-sidenav-container {
+  height: 100%;
+  .myapp-main-content {
+    margin: 8px;
+    div:not(:last-child) {
+      margin-bottom: 8px;
+    }
+  }
+}
+
+.myapp-appbar {
+  button.myapp-appbar-menu {
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-left: 0;
+    margin-right: 16px;
+    min-width: 0;
+  }
+}
+
+mat-sidenav {
+  min-width: 200px;
+  max-width: 80vw;
 }
