--- a/angular-mdc/src/app/app.component.html
+++ b/angular-mdc/src/app/app.component.html
@@ -1,1 +1,6 @@
+<div>
 <button mdc-button raised>Hello, Material!</button>
+</div>
+<div>
+<mdc-text-field label="Text Input" outlined></mdc-text-field>
+</div>
