メニューを作って若干それっぽい画面に

--- a/angular-mdc/src/app/app.component.html
+++ b/angular-mdc/src/app/app.component.html
@@ -1,6 +1,42 @@
-<div>
-<button mdc-button raised>Hello, Material!</button>
-</div>
-<div>
-<mdc-text-field label="Text Input" outlined></mdc-text-field>
+<mdc-drawer drawer="modal" [open]="isDrawerOpened"
+            (opened)="isDrawerOpened = true;" (closed)="isDrawerOpened = false;">
+  <mdc-drawer-header>
+    <h3 mdcDrawerTitle>Hello</h3>
+  </mdc-drawer-header>
+  <mdc-drawer-content>
+    <mdc-list-group>
+      <h3 mdcListGroupSubheader>めにゅー</h3>
+      <mdc-list>
+        <mdc-list-item>Hoge</mdc-list-item>
+        <mdc-list-item>Fuga</mdc-list-item>
+        <mdc-list-item>Piyo</mdc-list-item>
+      </mdc-list>
+      <h3 mdcListGroupSubheader>ひみつ</h3>
+      <mdc-list>
+        <mdc-list-item>Uoooo</mdc-list-item>
+        <mdc-list-item>Uwaaa</mdc-list-item>
+      </mdc-list>
+    </mdc-list-group>
+  </mdc-drawer-content>
+</mdc-drawer>
+
+<mdc-top-app-bar [scrollTarget]="content">
+  <mdc-top-app-bar-row>
+    <mdc-top-app-bar-section [align]="'start'" title="Hello, Material!">
+      <button mdcTopAppBarNavIcon (click)="toggleDrawer()">
+        <mdc-icon>menu</mdc-icon>
+      </button>
+    </mdc-top-app-bar-section>
+  </mdc-top-app-bar-row>
+</mdc-top-app-bar>
+
+<div #content mdcTopAppBarFixedAdjust class="myapp-main-content">
+  <div class="myapp-main-content-inner">
+    <div>
+      <button mdc-button raised>ぼたん</button>
+    </div>
+    <div>
+      <mdc-text-field label="Text Input" placeholder="Input some text" outlined></mdc-text-field>
+    </div>
+  </div>
 </div>
