--- a/angular-mdc/src/app/app.component.scss
+++ b/angular-mdc/src/app/app.component.scss
@@ -1,3 +1,6 @@
-div {
-  margin-bottom: 8px;
+.myapp-main-content-inner {
+  margin: 8px;
+  div:not(:last-child) {
+    margin-bottom: 16px;
+  }
 }
