--- a/angular-mdc/src/styles.scss
+++ b/angular-mdc/src/styles.scss
@@ -4,3 +4,5 @@ $mdc-theme-primary: #1565c0; // primary color
 $mdc-theme-secondary: #388e3c; // secondary color
 
 @import "~@angular-mdc/theme/material";
+
+body { margin: 0; }
