Linear Progress Barを追加

--- a/angular-material/src/app/app.component.html
+++ b/angular-material/src/app/app.component.html
@@ -31,6 +31,9 @@
           <input matInput type="text" placeholder="Input some text" name="sample">
         </mat-form-field>
       </div>
+      <div>
+        <mat-progress-bar color="primary" mode="indeterminate"></mat-progress-bar>
+      </div>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
