--- a/angular-mdc/src/app/app.component.html
+++ b/angular-mdc/src/app/app.component.html
@@ -38,5 +38,8 @@
     <div>
       <mdc-text-field label="Text Input" placeholder="Input some text" outlined></mdc-text-field>
     </div>
+    <div>
+      <mdc-linear-progress></mdc-linear-progress>
+    </div>
   </div>
 </div>
