--- a/angular-material/src/app/app.component.html
+++ b/angular-material/src/app/app.component.html
@@ -1,39 +1,29 @@
-<mat-sidenav-container>
-  <mat-sidenav #sidenav>
-    <mat-toolbar color="primary">
-      Hello
-    </mat-toolbar>
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav #drawer class="sidenav" fixedInViewport="true"
+      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+      [mode]="(isHandset$ | async) ? 'over' : 'side'"
+      [opened]="!(isHandset$ | async)">
+    <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <h3 matSubheader>めにゅー</h3>
-      <mat-list-item><a matLine href="#">Hoge</a></mat-list-item>
-      <mat-list-item><a matLine href="#">Fuga</a></mat-list-item>
-      <mat-list-item><a matLine href="#">Piyo</a></mat-list-item>
-      <mat-divider></mat-divider>
-      <h3 matSubheader>ひみつ</h3>
-      <mat-list-item><a matLine href="#">Uoooo</a></mat-list-item>
-      <mat-list-item><a matLine href="#">Uwaaa</a></mat-list-item>
+      <a mat-list-item href="#">Link 1</a>
+      <a mat-list-item href="#">Link 2</a>
+      <a mat-list-item href="#">Link 3</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary" class="myapp-appbar">
-      <button mat-button (click)="sidenav.toggle()" class="myapp-appbar-menu">
-        <mat-icon>menu</mat-icon>
+    <mat-toolbar color="primary">
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()"
+        *ngIf="isHandset$ | async">
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Hello, Material!</span>
+      <span>Angular Material</span>
     </mat-toolbar>
     <div class="myapp-main-content">
-      <div>
-        <button mat-raised-button color="primary">ぼたん</button>
-      </div>
-      <div>
-        <mat-form-field appearance="outline">
-          <mat-label>Text Input</mat-label>
-          <input matInput type="text" placeholder="Input some text" name="sample">
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-progress-bar color="primary" mode="indeterminate"></mat-progress-bar>
-      </div>
+      <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
