--- a/angular-material/src/app/app.component.scss
+++ b/angular-material/src/app/app.component.scss
@@ -1,24 +1,30 @@
-mat-sidenav-container {
+.sidenav-container {
   height: 100%;
+}
+
+.sidenav {
+  width: 200px;
+}
+
+.sidenav .mat-toolbar {
+  background: inherit;
+}
+
+.mat-toolbar.mat-primary {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
+mat-toolbar > button:first-child {
+  margin-right: 24px;
+}
+
+mat-sidenav-content {
+  display: flex;
+  flex-direction: column;
   .myapp-main-content {
+    flex-grow: 1;
     margin: 8px;
-    div:not(:last-child) {
-      margin-bottom: 8px;
-    }
   }
-}
-
-.myapp-appbar {
-  button.myapp-appbar-menu {
-    padding-left: 16px;
-    padding-right: 16px;
-    margin-left: 0;
-    margin-right: 16px;
-    min-width: 0;
-  }
-}
-
-mat-sidenav {
-  min-width: 200px;
-  max-width: 80vw;
 }
