--- a/angular-mdc/src/styles.scss
+++ b/angular-mdc/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
-$mdc-theme-primary: #1565c0; // primary color
-$mdc-theme-secondary: #388e3c; // secondary color
+$mdc-theme-primary: #1565c0;    // $material-color-blue-800
+$mdc-theme-secondary: #388e3c;  // $material-color-green-700
 
 @import "~@angular-mdc/theme/material";
 
