トップに公式へのリンクを追加

--- a/angular-material/src/app/routes/top/top.component.html
+++ b/angular-material/src/app/routes/top/top.component.html
@@ -1,2 +1,8 @@
 <h1>Angular Material</h1>
 <h3>で作ってみた</h3>
+
+<div class="myapp-info">
+  <div>公式</div>
+  <div>↓</div>
+  <a href="https://material.angular.io/">material.angular.io</a>
+</div>
