--- a/angular-material/src/app/app.component.html
+++ b/angular-material/src/app/app.component.html
@@ -2,12 +2,11 @@
   <mat-sidenav #drawer class="sidenav" fixedInViewport="true"
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="!(isHandset$ | async)">
-    <mat-toolbar>Menu</mat-toolbar>
+      [opened]="(isHandset$ | async) ? false : true">
+    <mat-toolbar>おしながき</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item routerLink="/top">トップ</a>
+      <a mat-list-item routerLink="/features">特徴</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -20,7 +19,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Angular Material</span>
+      <span>{{ title }}</span>
     </mat-toolbar>
     <div class="myapp-main-content">
       <router-outlet></router-outlet>
