--- a/angular-material/src/app/routes/features/features.component.html
+++ b/angular-material/src/app/routes/features/features.component.html
@@ -1,3 +1,6 @@
-<p>
-  features works!
-</p>
+<h3>Schematics</h3>
+<p>Schematicsという機能で、いくつかのコンポーネント雛形が提供されている。</p>
+
+<hr>
+address-form: 配送先入力フォーム
+<myapp-address-form></myapp-address-form>
