Fix: コンテンツが縦に長くなるとTop App Barが消える

--- a/angular-material/src/app/app.component.scss
+++ b/angular-material/src/app/app.component.scss
@@ -23,6 +23,10 @@ mat-toolbar > button:first-child {
 mat-sidenav-content {
   display: flex;
   flex-direction: column;
+  mat-toolbar {
+    flex-grow: 0;
+    flex-shrink: 0;
+  }
   .myapp-main-content {
     flex-grow: 1;
     margin: 8px;
