navigationとdashboardのschematicsを追加

--- a/angular-material/src/app/routes/features/features.component.html
+++ b/angular-material/src/app/routes/features/features.component.html
@@ -2,5 +2,15 @@
 <p>Schematicsという機能で、いくつかのコンポーネント雛形が提供されている。</p>
 
 <hr>
-address-form: 配送先入力フォーム
+<h4>navigation</h4>
+<p>画面上部のバーと左側メニューの雛形。このサンプルそのものを作成するのに使用した。</p>
+
+<hr>
+<h4>address-form</h4>
+<p>配送先入力フォーム。</p>
 <myapp-address-form></myapp-address-form>
+
+<hr>
+<h4>dashboard</h4>
+<p>画像を並べて表示する。</p>
+<myapp-dashboard></myapp-dashboard>
