--- a/angular-material/src/app/routes/features/features.component.scss
+++ b/angular-material/src/app/routes/features/features.component.scss
@@ -4,3 +4,10 @@ myapp-address-form {
   width: 100%;
   height: 300px;
 }
+
+myapp-dashboard {
+  display: block;
+  overflow: auto;
+  width: 100%;
+  height: 200px;
+}
