Schematicsサンプル表示領域を調整

--- a/angular-material/src/app/routes/features/features.component.html
+++ b/angular-material/src/app/routes/features/features.component.html
@@ -8,9 +8,9 @@
 <hr>
 <h4>address-form</h4>
 <p>配送先入力フォーム。</p>
-<myapp-address-form></myapp-address-form>
+<myapp-address-form class="myapp-schematics"></myapp-address-form>
 
 <hr>
 <h4>dashboard</h4>
 <p>画像を並べて表示する。</p>
-<myapp-dashboard></myapp-dashboard>
+<myapp-dashboard class="myapp-schematics"></myapp-dashboard>
