--- a/angular-material/src/app/routes/features/features.component.scss
+++ b/angular-material/src/app/routes/features/features.component.scss
@@ -1,13 +1,14 @@
-myapp-address-form {
+.myapp-schematics {
   display: block;
   overflow: auto;
   width: 100%;
+  border: solid grey 1px;
+}
+
+myapp-address-form {
   height: 300px;
 }
 
 myapp-dashboard {
-  display: block;
-  overflow: auto;
-  width: 100%;
-  height: 200px;
+  height: 300px;
 }
