コード例を追加

--- a/angular-material/src/app/routes/features/features.component.html
+++ b/angular-material/src/app/routes/features/features.component.html
@@ -1,5 +1,17 @@
 <h3>Schematics</h3>
-<p>Schematicsという機能で、いくつかのコンポーネント雛形が提供されている。</p>
+<p>AngularのSchematicsという仕組みで、いくつかのコンポーネント雛形が提供されている。</p>
+
+<div class="myapp-code-example">
+<pre>
+# 普通に空のコンポーネントを生成する場合
+$ ng generate component &lt;出力先&gt;
+
+# Angular Materialのコンポーネント雛形を生成する場合
+$ ng generate @angular/material:&lt;Schematic名&gt; &lt;出力先&gt;
+</pre>
+</div>
+
+<p>以下、提供されている雛形をそれぞれ説明する。</p>
 
 <hr>
 <h4>navigation</h4>
