tableの例を追加

--- a/angular-material/src/app/routes/features/features.component.html
+++ b/angular-material/src/app/routes/features/features.component.html
@@ -26,3 +26,8 @@ $ ng generate @angular/material:&lt;Schematic名&gt; &lt;出力先&gt;
 <h4>dashboard</h4>
 <p>画像を並べて表示する。</p>
 <myapp-dashboard class="myapp-schematics"></myapp-dashboard>
+
+<hr>
+<h4>table</h4>
+<p>ソートとページング機能を持つテーブル。</p>
+<myapp-table class="myapp-schematics"></myapp-table>
