tableの例を追加

--- a/angular-material/src/app/routes/features/features.component.html
+++ b/angular-material/src/app/routes/features/features.component.html
@@ -31,3 +31,8 @@ $ ng generate @angular/material:&lt;Schematic名&gt; &lt;出力先&gt;
 <h4>table</h4>
 <p>ソートとページング機能を持つテーブル。</p>
 <myapp-table class="myapp-schematics"></myapp-table>
+
+<hr>
+<h4>tree</h4>
+<p>ディレクトリ等のツリー構造を表現する。</p>
+<myapp-tree class="myapp-schematics"></myapp-tree>
