リネームに対応

--- a/angular-material/src/app/routes/schematics/schematics.component.html
+++ b/angular-material/src/app/routes/schematics/schematics.component.html
@@ -1,4 +1,3 @@
-<h3>Schematics</h3>
 <p>AngularのSchematicsという仕組みで、いくつかのコンポーネント雛形が提供されている。</p>
 
 <div class="myapp-code-example">
@@ -20,19 +19,19 @@ $ ng generate @angular/material:&lt;Schematic名&gt; &lt;出力先&gt;
 <hr>
 <h4>address-form</h4>
 <p>配送先入力フォーム。</p>
-<myapp-address-form class="myapp-schematics"></myapp-address-form>
+<myapp-address-form class="myapp-schematic-examples"></myapp-address-form>
 
 <hr>
 <h4>dashboard</h4>
 <p>画像を並べて表示する。</p>
-<myapp-dashboard class="myapp-schematics"></myapp-dashboard>
+<myapp-dashboard class="myapp-schematic-examples"></myapp-dashboard>
 
 <hr>
 <h4>table</h4>
 <p>ソートとページング機能を持つテーブル。</p>
-<myapp-table class="myapp-schematics"></myapp-table>
+<myapp-table class="myapp-schematic-examples"></myapp-table>
 
 <hr>
 <h4>tree</h4>
 <p>ディレクトリ等のツリー構造を表現する。</p>
-<myapp-tree class="myapp-schematics"></myapp-tree>
+<myapp-tree class="myapp-schematic-examples"></myapp-tree>
