--- a/angular-material/src/app/app.component.html
+++ b/angular-material/src/app/app.component.html
@@ -6,7 +6,7 @@
     <mat-toolbar>おしながき</mat-toolbar>
     <mat-nav-list (click)="dismissDrawer()">
       <a mat-list-item routerLink="/top">トップ</a>
-      <a mat-list-item routerLink="/features">特徴</a>
+      <a mat-list-item routerLink="/schematics">Schematics</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
