--- a/angular-mdc/src/app/app.component.html
+++ b/angular-mdc/src/app/app.component.html
@@ -5,8 +5,8 @@
   </mdc-drawer-header>
   <mdc-drawer-content>
     <mdc-list>
-      <mdc-list-item>トップ</mdc-list-item>
-      <mdc-list-item>xxx</mdc-list-item>
+      <mdc-list-item routerLink="/top">トップ</mdc-list-item>
+      <mdc-list-item routerLink="/top-app-bar">Top App bar</mdc-list-item>
     </mdc-list>
   </mdc-drawer-content>
 </mdc-drawer>
