--- a/angular-mdc/src/app/routes/top-app-bar/top-app-bar.component.html
+++ b/angular-mdc/src/app/routes/top-app-bar/top-app-bar.component.html
@@ -1,3 +1,42 @@
-<p>
-  top-app-bar works!
-</p>
+<div class="myapp-content">
+
+<p>Angular MDCでは画面上部のバー(Top App Bar)の機能が多い。</p>
+
+<div class="myapp-options">
+
+  <div>
+  <mdc-form-field>
+  <mdc-switch [(ngModel)]="appBarService.fixed"></mdc-switch>
+  <label>Fixed</label>
+  </mdc-form-field>
+  </div>
+
+  <div>
+  <mdc-form-field>
+  <mdc-switch [(ngModel)]="appBarService.short"></mdc-switch>
+  <label>Short</label>
+  </mdc-form-field>
+  </div>
+
+  <div>
+  <mdc-form-field>
+  <mdc-switch [(ngModel)]="appBarService.dense"></mdc-switch>
+  <label>Dense</label>
+  </mdc-form-field>
+  </div>
+
+  <div>
+  <mdc-form-field>
+  <mdc-switch [(ngModel)]="appBarService.prominent"></mdc-switch>
+  <label>Prominent</label>
+  </mdc-form-field>
+  </div>
+
+</div>
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+</div>
